@@ -1,9 +1,9 @@
 /*****************************************************************************/
-/** 
+/**
  * \file        util.c
  * \author      Weilun Fong | wlf@zhishan-iot.tk
  * \brief       public operations
- * \note        
+ * \note
  * \version     v1.2
  * \ingroup     UTIL
 ******************************************************************************/
@@ -13,14 +13,14 @@
 #ifdef __CONF_COMPILE_UTIL
 
 /*****************************************************************************/
-/** 
+/**
  * \author      Weilun Fong
- * \date        
+ * \date
  * \brief       disable master switch of MCU interrupt
- * \param[in]   
+ * \param[in]
  * \return      none
  * \ingroup     UTIL
- * \remarks     
+ * \remarks
 ******************************************************************************/
 void disableAllInterrupts(void)
 {
@@ -28,14 +28,14 @@ void disableAllInterrupts(void)
 }
 
 /*****************************************************************************/
-/** 
+/**
  * \author      Weilun Fong
- * \date        
+ * \date
  * \brief       enable master switch of MCU interrupt
- * \param[in]   
+ * \param[in]
  * \return      none
  * \ingroup     UTIL
- * \remarks     
+ * \remarks
 ******************************************************************************/
 void enableAllInterrupts(void)
 {
@@ -43,40 +43,82 @@ void enableAllInterrupts(void)
 }
 
 /*****************************************************************************/
-/** 
+/**
  * \author      Weilun Fong
- * \date        
+ * \date
  * \brief       software delay according to MCU clock frequency
  * \param[in]   t: how many one ms you want to delay
  * \return      none
  * \ingroup     UTIL
- * \remarks     
+ * \remarks
 ******************************************************************************/
 void sleep(uint16_t t)
 {
-    uint8_t i = 0;
-    
-    #if ( MCU_FRE_CLK == 11059200L )
+    __asm
 
-        while(t--)
-        {
-            i = 110;
-            while(i--);
-        }
+        ; preprocess
+        clr c
+        mov a,dpl
+        subb a,#1
+        mov dpl,a
+        mov a,dph
+        subb a,#0
+        mov dph,a
 
-    #elif ( MCU_FRE_CLK == 12000000L )
+        ; calculate total cosume time
+        mov r6,dpl
+        mov r7,dph
+        mov __mullong_PARM_2,r6
+        mov (__mullong_PARM_2 + 1),r7
+        mov (__mullong_PARM_2 + 2),#0x00
+        mov (__mullong_PARM_2 + 3),#0x00
+        mov dptr,#0x0399
+        clr a
+        mov b,a
+        lcall   __mullong
+        mov r4,dpl
+        mov r5,dph
+        mov r6,b
+        mov r7,a
+        mov __divslong_PARM_2,#0x07
+        clr a
+        mov (__divslong_PARM_2 + 1),a
+        mov (__divslong_PARM_2 + 2),a
+        mov (__divslong_PARM_2 + 3),a
+        mov dpl,r4
+        mov dph,r5
+        mov b,r6
+        mov a,r7
+        lcall   __divslong
+        mov r4,dpl
+        mov r5,dph
+        mov a,#0xd2
+        clr c
+        subb    a,r4
+        mov dpl,a
+        mov a,#0xff
+        subb a,r5
+        mov dph,a
 
-        while(t--)
-        {
-            i = 120;
-            while(i--);
-        }
-        
-    #else
+        ; loop for sleep
+        mov a,dpl
+        anl a,dph
+        cpl a
+        jz ENDL$
+    LOOP$:
+        inc dptr
+        mov a,dpl
+        anl a,dph
+        cpl a
+        jnz LOOP$
+    ENDL$:
 
-    //TODO
+    __endasm;
 
-    #endif
+    /**
+     * @node: disable SDCC warning
+     */
+    t = 0;
 }
 
 #else
