@@ -145,3 +145,4 @@
            (3)update Makefile to v0.2.6
              - support <library> target, user can get usage via <make help>
              - optimize <make version> function
+           (4)optimize sleep function
